cluster/manifests/hippocampus-dev-github-token-server/overlays/dev/github-token-server/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: github-token-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: github-token-server
  mtls:
    mode: STRICT
