cluster/manifests/hippocampus-dev-github-token-server/overlays/dev/github-token-server/request_authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: github-token-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: github-token-server
  jwtRules:
    - issuer: https://token.actions.githubusercontent.com
      jwksUri: https://token.actions.githubusercontent.com/.well-known/jwks
      outputClaimToHeaders:
        - claim: sub
          header: X-Auth-Request-User
