cluster/manifests/hippocampus-dev-github-token-server/overlays/dev/github-token-server/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: github-token-server
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: github-token-server
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - pyroscope/pyroscope-distributor.pyroscope.svc.cluster.local
