cluster/manifests/hippocampus-dev-github-token-server/overlays/dev/github-token-server/authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: github-token-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: github-token-server
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - hippocampus-dev-github-token-server.minikube.127.0.0.1.nip.io
            - hippocampus-dev-github-token-server.kaidotio.dev
    - from:
        - source:
            namespaces:
              - istio-gateways
            principals:
              - cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - hippocampus-dev-github-token-server-public.kaidotio.dev
        - key: request.auth.claims[iss]
          values:
            - https://token.actions.githubusercontent.com
        - key: request.auth.claims[repository]
          values:
            - hippocampus-dev/hippocampus
        - key: request.auth.claims[job_workflow_ref]
          values:
            - hippocampus-dev/hippocampus/.github/workflows/reusable_issue-github-token.yaml@refs/heads/main
      to:
        - operation:
            methods:
              - POST
            paths:
              - /repos/hippocampus-dev/hippocampus/access_tokens/reader
              - /repos/hippocampus-dev/hippocampus/access_tokens/writer
              - /repos/hippocampus-dev/hippocampus/access_tokens/administration-reader
